@@ -250,34 +250,45 @@ namespace neu{
       }
       
       nvar::Type t = v["@type"];
+      v.erase("@type");
+      
       switch(t){
         case nvar::Rational:
           v = nrat(v["@numerator"], v["@denominator"]);
+          v.erase("@numerator");
+          v.erase("@denominator");
           break;
         case nvar::Real:
           v = nreal(v["@real"].c_str());
+          v.erase("@real");
           break;
         case nvar::Symbol:
           v = nsym(v["@symbol"].str());
+          v.erase("@symbol");
           break;
         case nvar::List:{
           nvar& l = v["@list"];
           l.intoList();
           v = move(l);
+          v.erase("@list");
           break;
         }
         case nvar::Queue:{
           nvar& q = v["@queue"];
           q.intoQueue();
           v = move(q);
+          v.erase("@queue");
           break;
         }
         case nvar::Function:
           v = move(nml(v["@function"]));
+          v.erase("@function");
           break;
         case nvar::HeadSequence:
           v = move(nvar(move(v["@head"]), move(v["@sequence"]),
                         nvar::HeadSequenceType));
+          v.erase("@head");
+          v.erase("@sequence");
           break;
         case nvar::Set:{
           v.intoSet();
@@ -298,14 +309,21 @@ namespace neu{
         case nvar::HeadMap:
           v = move(nvar(move(v["@head"]), move(v["@map"]),
                         nvar::HeadMapType));
+          v.erase("@head");
+          v.erase("@map");
           break;
         case nvar::SequenceMap:
           v = move(nvar(move(v["@sequence"]), move(v["@map"]),
                         nvar::SequenceMapType));
+          v.erase("@sequence");
+          v.erase("@map");
           break;
         case nvar::HeadSequenceMap:
           v = move(nvar(move(v["@head"]), move(v["@sequence"]),
                         move(v["@map"]), nvar::HeadSequenceMapType));
+          v.erase("@head");
+          v.erase("@sequence");
+          v.erase("@map");
           break;
       }
     }
