@@ -1,4 +1,12 @@
 
+Neu 1.8.0 - 1/23/15
+
+ -Added JSON parser and generator (NJSONParser and
+  NJSONGenerator). See test/regress/json for an example.
+
+ -Fixes to NDatabase.
+
+ -Added variant of nvar::pushBack() and pushFront().
 
 Neu 1.7.2 - 1/12/15
 
